--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "next-auth": "^4.21.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-universal": "^2.2.1",
     "superjson": "1.12.2",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "zod": "^3.21.4"
   },
   "devDependencies": {
