--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-enhanced-marker": "^1.0.21",
     "react-leaflet-universal": "^2.2.1",
     "superjson": "1.12.2",
     "tailwind-scrollbar-hide": "^1.1.7",
