--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@trpc/server": "^10.18.0",
     "leaflet": "^1.9.3",
     "leaflet-easyprint": "^2.1.9",
+    "mapbox-gl": "npm:empty-npm-package@1.0.0",
+    "maplibre-gl": "^2.4.0",
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
     "react": "18.2.0",
@@ -27,6 +29,7 @@
     "react-leaflet": "^4.2.1",
     "react-leaflet-enhanced-marker": "^1.0.21",
     "react-leaflet-universal": "^2.2.1",
+    "react-map-gl": "^7.0.23",
     "superjson": "1.12.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "zod": "^3.21.4"
