--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
     "@types/video-react": "^0.15.1",
+    "axios": "^1.4.0",
     "framer-motion": "^10.12.4",
     "leaflet": "^1.9.3",
     "leaflet-easyprint": "^2.1.9",
