--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/video-react": "^0.15.1",
     "axios": "^1.4.0",
     "framer-motion": "^10.12.4",
@@ -27,6 +28,7 @@
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
